--- a/src/components/layout/CTABand.module.css
+++ b/src/components/layout/CTABand.module.css
@@ -14,7 +14,7 @@
 }
 .inner {
   position: relative;
-  padding: 64px 0;
+  padding-block: 64px;
   display: flex;
   align-items: center;
   justify-content: space-between;
