--- a/src/components/sections/Stats.module.css
+++ b/src/components/sections/Stats.module.css
@@ -2,7 +2,7 @@
   background: var(--navy-800);
 }
 .inner {
-  padding: 30px 0;
+  padding-block: 30px;
 }
 .label {
   text-align: center;
